[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tutorial.gd" type="Script" id=1]
[ext_resource path="res://email_tutorial.tscn" type="PackedScene" id=2]
[ext_resource path="res://Gmail.png" type="Texture" id=3]
[ext_resource path="res://Instagram.png" type="Texture" id=4]
[ext_resource path="res://Whatsapp.png" type="Texture" id=5]
[ext_resource path="res://grey_button02.png" type="Texture" id=6]
[ext_resource path="res://grey_button01.png" type="Texture" id=7]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="ColorRect" parent="."]
self_modulate = Color( 0.74902, 0.917647, 0.74902, 1 )
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.27451, 0.235294, 0.45098, 1 )

[node name="ColorRect" type="TextureRect" parent="Panel"]
margin_left = -2.0
margin_right = 1024.0
margin_bottom = 44.0
texture = ExtResource( 7 )
expand = true

[node name="Content" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Label" type="Label" parent="Panel/Content"]
self_modulate = Color( 0, 0, 0, 1 )
margin_right = 1024.0
margin_bottom = 31.0
text = "
Desktop"
align = 1

[node name="Panel" type="TextureRect" parent="Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -72.0
texture = ExtResource( 6 )
expand = true

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.5
margin_top = -25.5
margin_right = 112.5
margin_bottom = 25.5

[node name="EmailButton" type="Button" parent="Panel/Panel/HBoxContainer"]
margin_right = 36.0
margin_bottom = 51.0
icon = ExtResource( 3 )

[node name="SocialButton" type="Button" parent="Panel/Panel/HBoxContainer"]
margin_left = 40.0
margin_right = 76.0
margin_bottom = 51.0
icon = ExtResource( 5 )

[node name="DMButton" type="Button" parent="Panel/Panel/HBoxContainer"]
margin_left = 80.0
margin_right = 116.0
margin_bottom = 51.0
icon = ExtResource( 4 )

[node name="EmailPopup" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -461.0
margin_top = -237.0
margin_right = 461.0
margin_bottom = 237.0
window_title = "Emails"

[node name="Email_Window" parent="EmailPopup" instance=ExtResource( 2 )]

[node name="Tutorial_Email" type="AcceptDialog" parent="EmailPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -226.0
margin_top = -131.0
margin_right = 226.0
margin_bottom = 131.0
window_title = "Tutorial 2/12"
dialog_text = "This is the email app screen.

Here you will find a list of buttons on the left side that indicate
emails that you have received.

Click \"OK\" to proceed..."

[node name="Tutorial2" type="WindowDialog" parent="EmailPopup"]
margin_left = 152.0
margin_top = 51.0
margin_right = 412.0
margin_bottom = 144.0
window_title = "Tutorial 3/12"

[node name="Label" type="Label" parent="EmailPopup/Tutorial2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = -15.5
margin_right = 118.0
margin_bottom = 15.5
text = "Go ahead and click on the top button
labeled \"Real Email\""

[node name="Tutorial3" type="WindowDialog" parent="EmailPopup"]
margin_left = 168.0
margin_top = 89.0
margin_right = 383.0
margin_bottom = 141.0
window_title = "Tutorial 5/12"

[node name="Label" type="Label" parent="EmailPopup/Tutorial3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -107.5
margin_top = -35.0
margin_right = 107.5
text = "Now let's click the second email"

[node name="ComingSoonDialog" type="AcceptDialog" parent="."]
margin_left = 346.0
margin_top = 261.0
margin_right = 646.0
margin_bottom = 361.0
window_title = "Feature coming soon!"
dialog_text = "This feature is in development..."
dialog_autowrap = true
__meta__ = {
"_editor_description_": ""
}

[node name="Tutorial" type="AcceptDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -282.5
margin_top = -88.5
margin_right = 282.5
margin_bottom = 88.5
window_title = "Tutorial"
dialog_text = "Welcome to the tutorial!

The goal of the simulation game is to be able to detect scams that you may recieve in
your Emails, social media, or texts.

For this tutorial, we will take you through the process of detecting scams in Emails!

Click \"OK\" if you are ready to move on..."

[node name="Tutorial1" type="WindowDialog" parent="."]
margin_left = 286.0
margin_top = 375.0
margin_right = 526.0
margin_bottom = 508.0
window_title = "Tutorial 1/12"

[node name="Label" type="Label" parent="Tutorial1"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -97.5
margin_top = -15.5
margin_right = 97.5
margin_bottom = 15.5
text = "To begin looking at the Emails,
click on the Email app below"

[connection signal="pressed" from="Panel/Panel/HBoxContainer/EmailButton" to="." method="_on_EmailButton_pressed"]
[connection signal="pressed" from="Panel/Panel/HBoxContainer/SocialButton" to="." method="_on_SocialButton_pressed"]
[connection signal="pressed" from="Panel/Panel/HBoxContainer/DMButton" to="." method="_on_DMButton_pressed"]
[connection signal="confirmed" from="EmailPopup/Tutorial_Email" to="." method="_on_Tutorial_Email_confirmed"]
[connection signal="confirmed" from="Tutorial" to="." method="_on_Tutorial_confirmed"]
